--- a/index.html
+++ b/index.html
@@ -26,24 +26,44 @@
     <div id="Container_primogruppo">
         <div id="primo_articolo">
             <div class="descrizionePrimoArticolo">
-                <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit assumenda sed dolor explicabo
-                    eaque culpa minima officia obcaecati, asperiores nostrum repellat optio nulla soluta, esse
-                    repellendus facilis eum, error quo! Consectetur a facilis voluptatibus? Alias, et temporibus earum
-                    eligendi ut nemo neque magni eius aliquid sequi praesentium natus animi ullam! </h4>
+                <h4>Il termine feudalesimo, dal latino medievale feudum (feudo), designa il sistema economico e sociale
+                    dell'Europa medievale, basato sulla Feudalità e sulla Signoria fondiaria, nel quale un'aristocrazia
+                    nobiliare disponeva della terra ed esercitava poteri signorili da carattere politico, militare e
+                    giudiziario (società feudale).</h4>
                 <!-- <img src="immagini/gruppo 1/PovertàNelMedioevo B_N.png" alt=""> -->
             </div>
 
             <figure>
-                <img class="ImgPrimoGruppo" src="immagini/PrimoArticolo_SicurezzaStradaleMobilitàSostenibile.jfif"
+                <img class="ImgPrimoGruppo" src="immagini/gruppo 1/Feudalesimo.JPG"
                     alt="Immagine primo articolo">
-                <figcaption>Lorem ipsum dolor sit amet consectetur adipisicing elit. Sequi, at?</figcaption>
+                <figcaption>Feudalesimo</figcaption>
             </figure>
 
             <div class="descrizionePrimoArticolo">
-                <h4>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit assumenda sed dolor explicabo
-                    eaque culpa minima officia obcaecati, asperiores nostrum repellat optio nulla soluta, esse
-                    repellendus facilis eum, error quo! Consectetur a facilis voluptatibus? Alias, et temporibus earum
-                    eligendi ut nemo neque magni eius aliquid sequi praesentium natus animi ullam! </h4>
+                <h4>Il Feudalesimo, sebbene non sia l'unica causa della povertà nel Medioevo, ha avuto un ruolo
+                    determinante. Ecco i principali fattori che hanno provocato la povertà:
+                    <ul>
+                        <li>Sistema economico agrario e autoconsumo: Il feudalesimo era basato su un'economia agricola,
+                            in cui
+                            i contadini lavoravano la terra per il signore in cambio di protezione e un piccolo terreno.
+                            La
+                            produttività era bassa e il surplus veniva spesso destinato al signore.</li>
+                        <li>Mancanza di mobilità sociale: Il sistema feudale era rigidamente diviso: i contadini, o
+                            servi della
+                            gleba, lavoravano per il signore senza guadagnare abbastanza e con libertà limitate, senza
+                            possibilità di migliorare la loro condizione.</li>
+                        <li>Imposte pesanti e debiti: I contadini erano costretti a pagare tributi elevati ai signori
+                            feudali
+                            sotto forma di lavoro (corvée), rendite o censi. Senza accesso a credito o risparmio, erano
+                            vulnerabili a carestie, finendo spesso per indebitarsi.</li>
+                        <li>Inadeguatezza della protezione e delle risorse: I signori feudali dovevano proteggere terre
+                            e
+                            persone, ma spesso non riuscivano a farlo, soprattutto in tempi di guerre. Inoltre, il
+                            sistema
+                            feudale impediva un'economia di mercato efficiente, causando scarsità e povertà.</li>
+                    </ul>
+
+                </h4>
                 <!-- <img src="immagini/gruppo 1/PovertàNelMedioevo B_N.png" alt=""> -->
             </div>
 
@@ -51,43 +71,89 @@
 
         <div id="altri_articoli">
             <div id="altri_articoli_sinistra">
-                <h4>Lorem ipsum dolor sit amet.</h4>
+                <h4>I Mongoli</h4>
                 <figure>
                     <img class="altri_articoli_img"
-                        src="immagini/PrimoArticolo_SicurezzaStradaleMobilitàSostenibile.jfif"
+                        src="immagini/gruppo 1/Mongoli.JPG"
                         alt="Immagine primo articolo">
                 </figure>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit assumenda sed dolor explicabo
-                    eaque culpa minima officia obcaecati, asperiores nostrum repellat optio nulla soluta, esse
-                    repellendus facilis eum, error quo! Consectetur a facilis voluptatibus? Alias, et temporibus earum
-                    eligendi ut nemo neque magni eius aliquid sequi praesentium natus animi ullam! </p>
+                <p>L'Impero mongolo (1206-1368) è stato il secondo impero più vasto della storia, coprendo, alla sua
+                    massima della sua estensione, 24,0 milioni di km², con una popolazione stimata intorno ai 100
+                    milioni di persone, il 25,6% del totale mondiale.
+                    Durante il percorso di conquista dei territori, si stima che l’11% della popolazione mondiale
+                    dell’epoca sia stata uccisa.
+                    I mongoli distruggevano tutto ciò che si presentava davanti al loro cammino e devastarono quasi
+                    completamente l’europa orientale e sud-orientale, facendo genocidi, distruggendo colture e
+                    saccheggiando, creando così uno stato di povertà assoluta nelle regioni coinvolte.
+                    I popoli coinvolti misero secoli per riprendersi da tale distruzione e atrocità.
+                </p>
                 <!-- figcaption>Per saperne di più...</figcaption -->
             </div>
             <div id="altri_articoli_centro">
-                <h4>Lorem ipsum dolor sit amet.</h4>
+                <h4>Guerre del 300</h4>
                 <figure>
                     <img class="altri_articoli_img"
-                        src="immagini/PrimoArticolo_SicurezzaStradaleMobilitàSostenibile.jfif"
+                        src="immagini/gruppo 1/Guerra del _300.JPG"
                         alt="Immagine primo articolo">
                 </figure>
-                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Impedit assumenda sed dolor explicabo
-                    eaque culpa minima officia obcaecati, asperiores nostrum repellat optio nulla soluta, esse
-                    repellendus facilis eum, error quo! Consectetur a facilis voluptatibus? Alias, et temporibus earum
-                    eligendi ut nemo neque magni eius aliquid sequi praesentium natus animi ullam! </p>
+                <p>Per tutto il Medioevo, guerre, carestie ed epidemie incisero profondamente sulle condizioni di vita
+                    delle comunità umane. In particolar modo nel XIV secolo l'Europa affrontò gravi difficoltà
+                    economiche, politiche e sociali che influirono negativamente sulle classi più deboli della società.
+                    Alcuni dei fattori principali furono:</p>
+                <ul>
+                    <li>Inflazione e svalutazione della moneta: la continua svalutazione della moneta provocò
+                        un'incremento dei prezzi, riducendo il potere d'acquisto delle persone, specialmente delle
+                        classi
+                        più povere.</li>
+                    <li>Crisi agricolo e carestie: le guerre e le invasioni danneggiarono l'agricoltura, ciò portò a una
+                        crescente fame tra le classi inferiori che dipendevano principalmente dall'agricoltura.
+                        -Invasioni e guerre civili: le incursioni barbariche e le lotte interne distrussero risorse e
+                        infrastrutture, aggravando la povertà.</li>
+                    <li>Indebolimento del sistema fiscale: le tasse divennero più pesanti e scorrette, impoverendo
+                        ulteriormente i contadini.</li>
+                    <li>Il declino dei commerci: l'instabilità politica ridusse i commerci, aumentando la scarsità di
+                        beni</li>
+                </ul>
+
+
             </div>
             <div id="altri_articoli_destra">
-                <h4>Lorem ipsum dolor sit amet.</h4>
+                <h4>La peste</h4>
                 <figure>
                     <img class="altri_articoli_img"
-                        src="immagini/PrimoArticolo_SicurezzaStradaleMobilitàSostenibile.jfif"
+                        src="immagini/gruppo 1/Peste.jpg"
                         alt="Immagine primo articolo">
                 </figure>
-                <ol>
-                    <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum repellat aliquid ut ducimus
-                        recusandae culpa, alias inventore illo vero, similique error, nostrum ipsa animi itaque.</li>
-                    <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam excepturi nam assumenda quasi!
-                        Adipisci aliquam officiis eum laborum? Autem esse blanditiis aliquam qui, totam ipsa?</li>
-                </ol>
+                <p>La Peste nera comparve per la prima volta nel 1347 in Europa portando conseguenze demografiche,
+                    sociali e mediche devastanti. Essa è stata innescata dal batterio Yersinia pestis, portato da navi
+                    genovesi provenienti dal Mar Nero, questo provocò la decimazione di circa un terzo della popolazione
+                    europea in pochi anni.
+                    Ci sono diverse conseguenze legate alla peste che hanno portato alla povertà:
+                </p>
+                <ul>
+                    <li>Devastazione demografica
+                        <ol>
+                            <li>Crollo della forza lavoro: con meno persone disponibili per lavorare, molte attività
+                                economiche rallentano o si fermano.
+                            </li>
+                            <li>Spopolamento rurale e urbano: molte aree agricole e città si svuotano, portando
+                                all'abbandono di terre e villaggi. </li>
+                        </ol>
+                    </li>
+                    <li>Economia
+                        <ol>
+                            <li>Carenza di manodopera: la drastica riduzione della popolazione portò a una grande
+                                carenza di lavoratori, aumentando il costo della manodopera e mettendo in difficoltà i
+                                proprietari terrieri.</li>
+                            <li>Inflazione e crollo dei prezzi: La riduzione della domanda di beni fece calare i prezzi.
+                            </li>
+                            <li>Aumento delle tensioni sociali: le difficoltà economichde aggravarono le disuguaglianze
+                                e portarono alle ribellioni contadine dovute alla pressioni fiscali e alle restrizioni
+                                imposte ai lavoratori. </li>
+
+                        </ol>
+                    </li>
+                </ul>
             </div>
 
         </div>
@@ -180,7 +246,7 @@
             </div>
 
             <figure>
-                <img class="ImgPrimoGruppo" src="immagini/gruppo 3/povertà.jpeg" alt="Immagine primo articolo">
+                <img class="ImgPrimoGruppo" src="immagini/gruppo 3/povertà_estrema.jpg" alt="Immagine primo articolo">
                 <figcaption>Povertà estrema</figcaption>
             </figure>
 
@@ -233,7 +299,7 @@
             <div id="altri_articoli_destra">
                 <h4>Divario tra Paesi sviluppati ed in via di sviluppo</h4>
                 <figure>
-                    <img class="altri_articoli_img" src="immagini/gruppo 3/povertà nel mondo.webp"
+                    <img class="altri_articoli_img" src="immagini/gruppo 3/Divario tra Paesi sviluppati ed in via di sviluppo.jpg"
                         alt="Immagine primo articolo">
                 </figure>
                 <ol>
@@ -292,7 +358,7 @@
             <div id="altri_articoli_centro">
                 <h4>Povertà nel Medioevo</h4>
                 <figure>
-                    <img class="altri_articoli_img" src="immagini/gruppo 4/Povertà nel medioevo - subarticle_2.jpg"
+                    <img class="altri_articoli_img" src="immagini/gruppo 4/Povertà nel medioevo.png"
                         alt="Immagine primo articolo">
                 </figure>
                 <p>«Nel Medioevo la povertà era un male estremamente diffuso e costante, si può dire endemico: molte
@@ -336,7 +402,7 @@
                     Ha 17 obiettivi tra cui la sostenibilità e la riduzione della povertà con lo scopo di promuovere uno
                     sviluppo equo, sostenibile e rispettoso dell’ambiente entro il 2030.
                 </h4>
-               <!-- <img src="immagini/gruppo 1/PovertàNelMedioevo B_N.png" alt=""> -->
+                <!-- <img src="immagini/gruppo 1/PovertàNelMedioevo B_N.png" alt=""> -->
             </div>
 
             <figure>
@@ -362,7 +428,7 @@
             <div id="altri_articoli_sinistra">
                 <h4>Sostenibilità</h4>
                 <figure>
-                    <img class="altri_articoli_img" src="immagini/gruppo 5/Sostenibilità.jpg"
+                    <img class="altri_articoli_img" src="immagini/gruppo 5/Sostenibilità.png"
                         alt="Immagine primo articolo">
                 </figure>
                 <p>I processi educativi all’interno di questo quadro, la sostenibilità, devono durare per tutta la vita
@@ -376,7 +442,7 @@
             <div id="altri_articoli_centro">
                 <h4>Povertà</h4>
                 <figure>
-                    <img class="altri_articoli_img" src="immagini/gruppo 5/Povertà.webp" alt="Immagine primo articolo">
+                    <img class="altri_articoli_img" src="immagini/gruppo 5/Povertà.jpeg" alt="Immagine primo articolo">
                 </figure>
                 <p>La povertà, una delle sfide più gravi e persistenti del nostro tempo, continua a segnare milioni di
                     vite, sottraendo opportunità e dignità a chi ne è colpito. La povertà è un fenomeno complesso che
@@ -387,7 +453,7 @@
             <div id="altri_articoli_destra">
                 <h4>Obiettivi Agenda 2030</h4>
                 <figure>
-                    <img class="altri_articoli_img" src="immagini/gruppo 5/Obiettivi Agenda 2030.jpeg"
+                    <img class="altri_articoli_img" src="immagini/gruppo 5/Sostenibilità.jpg"
                         alt="Immagine primo articolo">
                 </figure>
                 <p>Gestione sostenibile del suolo e la conservazione della biodiversità. Applicare a livello
@@ -410,7 +476,7 @@
                     Le lezioni chiave includono la diversificazione finanziaria,
                     la gestione prudente del credito e la capacità di reagire velocemente a eventi imprevisti.
                 </h4>
-               <!-- <img src="immagini/gruppo 1/PovertàNelMedioevo B_N.png" alt=""> -->
+                <!-- <img src="immagini/gruppo 1/PovertàNelMedioevo B_N.png" alt=""> -->
             </div>
 
             <figure>
@@ -430,10 +496,10 @@
 
         <div id="altri_articoli">
             <div id="altri_articoli_sinistra">
-                <h4>Lorem ipsum dolor sit amet.</h4>
+                <h4>Autosufficienza delle comunità rurali nel medioevo</h4>
                 <figure>
                     <img class="altri_articoli_img"
-                        src="immagini/PrimoArticolo_SicurezzaStradaleMobilitàSostenibile.jfif"
+                        src="immagini/gruppo 6/Autosufficienza_Comunità_Rurali.jpg"
                         alt="Immagine primo articolo">
                 </figure>
                 <p>Nel Medioevo, le comunità rurali erano autosufficienti e collegate da mercati.
@@ -443,10 +509,10 @@
                 <!-- figcaption>Per saperne di più...</figcaption -->
             </div>
             <div id="altri_articoli_centro">
-                <h4>Lorem ipsum dolor sit amet.</h4>
+                <h4>Diversità economica nel medioevo</h4>
                 <figure>
                     <img class="altri_articoli_img"
-                        src="immagini/PrimoArticolo_SicurezzaStradaleMobilitàSostenibile.jfif"
+                        src="immagini/gruppo 6/Diversità economica nel medioevo.jpg"
                         alt="Immagine primo articolo">
                 </figure>
                 <p>Nel Medioevo, la diversità economica e la resilienza permettevano alle società
@@ -478,7 +544,7 @@
 <footer>
     <div id="autori">
         <p>Classe 3A</p>
-        <p>Docenti: A. De Luca, D. De Rossi, C. Caramuta, P. Castrovillari, S. Pellizzari</p>
+        <p>Docenti: A. De Luca, D. De Rossi, C. Caramuta, P. Castrovillari, S. Pellizzari.</p>
     </div>
     <div id="contatti">
         <p>Contatti:</p>
