--- a/index.html
+++ b/index.html
@@ -521,18 +521,14 @@
                     mentre fiere e innovazioni agricole favorivano la ripresa economica. </p>
             </div>
             <div id="altri_articoli_destra">
-                <h4>Lorem ipsum dolor sit amet.</h4>
+                <h4>Distribuzione della ricchezza</h4>
                 <figure>
                     <img class="altri_articoli_img"
-                        src="immagini/PrimoArticolo_SicurezzaStradaleMobilitàSostenibile.jfif"
+                        src="immagini/gruppo 6/Distribuzione_della_ricchezza.jpg"
                         alt="Immagine primo articolo">
                 </figure>
-                <ol>
-                    <li>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum repellat aliquid ut ducimus
-                        recusandae culpa, alias inventore illo vero, similique error, nostrum ipsa animi itaque.</li>
-                    <li>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Ullam excepturi nam assumenda quasi!
-                        Adipisci aliquam officiis eum laborum? Autem esse blanditiis aliquam qui, totam ipsa?</li>
-                </ol>
+                <p>Nel Medioevo, la ricchezza era concentrata nelle mani di pochi, con un sistema feudale che favoriva nobili e chiesa, e la redistribuzione avveniva tramite carità. Oggi, la ricchezza è distribuita tramite il welfare state e politiche fiscali progressive, con l'obiettivo di ridurre le disuguaglianze sociali. La differenza principale sta nel passaggio da un sistema caritativo informale a un welfare pubblico e statale.</p>
+
             </div>
 
         </div>
