--- a/PovertànelMedioevo.html
+++ b/PovertànelMedioevo.html
@@ -19,11 +19,11 @@
             <li><a href="index.html##Container_sestogruppo">Lezioni dalla storia per il futuro</a></li>
         </ul>
     </nav>
-    <h1>Sostenibilità</h1>
+    <h1>Povertà nel Medioevo</h1>
 </header>
 
 <body>
-    <h1>Povertà nel Medioevo</h1>
+    
     <div id="Feudalesimo">
         <h2>FEUDALESIMO</h2>
  <p>Il termine feudalesimo, dal latino medievale <em>feudum</em> (feudo), designa il sistema economico e sociale dell'Europa medievale, basato sulla Feudalità e sulla Signoria fondiaria, nel quale un'aristocrazia nobiliare disponeva della terra ed esercitava poteri signorili da carattere politico, militare e giudiziario (società feudale). 
@@ -35,14 +35,14 @@
     -Inadeguatezza della protezione e delle risorse: I signori feudali dovevano proteggere terre e persone, ma spesso non riuscivano a farlo, soprattutto in tempi di guerre. Inoltre, il sistema feudale impediva un'economia di mercato efficiente, causando scarsità e povertà. 
     </p>
 </div>
-<img src="immagini/gruppo 1/Feudalesimo.JPG" alt="">
+<img class="img_gruppo1" src="immagini/gruppo 1/Feudalesimo.JPG" alt="">
     <div id="Mongoli">
      <h2>MONGOLI </h2>
      <p>L'Impero mongolo (1206-1368) è stato il secondo impero più vasto della storia, coprendo, alla sua massima  della sua estensione, 24,0 milioni di km², con una popolazione stimata intorno ai 100 milioni di persone, il 25,6% del totale mondiale.
         Durante il percorso di conquista dei territori, si stima che l’11% della popolazione mondiale dell’epoca sia stata uccisa.
         I mongoli distruggevano tutto ciò che si presentava davanti al loro cammino e devastarono quasi completamente l’europa orientale e sud-orientale, facendo genocidi, distruggendo colture e saccheggiando, creando così uno stato di povertà assoluta nelle regioni coinvolte.
         I popoli coinvolti misero secoli per riprendersi da tale distruzione e atrocità.</p>
-        <img src="immagini/Mongoli.JPG" alt="">
+        <img class="img_gruppo1" src="immagini/gruppo 1/Mongoli.JPG" alt="">
     </div>
   
     <div id="Guerre del'300">
@@ -55,7 +55,7 @@
             - Indebolimento del sistema fiscale: le tasse divennero più pesanti e scorrette, impoverendo ulteriormente i contadini. 
             -Il declino dei commerci: l'instabilità politica ridusse i commerci, aumentando la scarsità di beni. 
             </p>
-            <img src="immagini/gruppo 1/Guerre del '300.JPG" alt="">
+            <img class="img_gruppo1" src="immagini/gruppo 1/Guerre del '300.JPG" alt="">
             </div>
             <div id="Peste">
                 <h2>PESTE</h2>
@@ -69,7 +69,7 @@
                     2. Inflazione e crollo dei prezzi: La riduzione della domanda di beni fece calare i prezzi.
                     -Aumento delle tensioni sociali: le difficoltà economichde aggravarono le disuguaglianze e portarono alle ribellioni contadine dovute alla pressioni fiscali e alle restrizioni imposte ai lavoratori. 
                     </p>
-                    <img src="immagini/gruppo 1/Peste.jpg" alt="">
+                    <img class="img_gruppo1" src="immagini/gruppo 1/Peste.jpg" alt="">
             </div>
 </body>
 <footer>
