--- a/index.html
+++ b/index.html
@@ -189,69 +189,89 @@
     <div id="Container_secondogruppo">
         <div id="primo_articolo">
             <div class="descrizionePrimoArticolo">
-                <h4> Nel passato, la sostenibilità era naturale perchè le persone usavano solo risorse locali,
-                    riciclavano e vivevano senaza inquinare eccessivamente. Tuttavia, a volte sfruttavano troppo il
-                    suolo causando problemi come la deforestazione.
-                </h4>
-                <!-- <img src="immagini/gruppo 1/PovertàNelMedioevo B_N.png" alt=""> -->
+                <a href="Sostenibilià ambientale nel passato.html">
+                    <h4> Nel passato, la sostenibilità era naturale perchè le persone usavano solo risorse locali,
+                        riciclavano e vivevano senaza inquinare eccessivamente. Tuttavia, a volte sfruttavano troppo il
+                        suolo causando problemi come la deforestazione.
+                    </h4>
+                    <!-- <img src="immagini/gruppo 1/PovertàNelMedioevo B_N.png" alt=""> -->
+                </a>
             </div>
 
             <figure>
-                <img class="ImgPrimoGruppo" src="immagini/gruppo 2/AgricolturaMedievale.webp"
-                    alt="Immagine primo articolo">
-                <figcaption>Agricoltura medievale</figcaption>
+                <a href="Sostenibilià ambientale nel passato.html">
+                    <img class="ImgPrimoGruppo" src="immagini/gruppo 2/AgricolturaMedievale.webp"
+                        alt="Immagine primo articolo">
+                    <figcaption>Agricoltura medievale</figcaption>
+                </a>
             </figure>
 
             <div class="descrizionePrimoArticolo">
-                <h4>Oggi, invece, la sostenibilità è una scelta consapevole, perchè consumiamo molte risorse e
-                    produciamo inquinamento. Per ridurre l'impatto ambientale, usiamo energie rinnovabili, ricicliamo e
-                    cerchiamo soluzioni ecologiche. </h4>
-                <!-- <img src="immagini/gruppo 1/PovertàNelMedioevo B_N.png" alt=""> -->
+                <a href="Sostenibilià ambientale nel passato.html">
+                    <h4>Oggi, invece, la sostenibilità è una scelta consapevole, perchè consumiamo molte risorse e
+                        produciamo inquinamento. Per ridurre l'impatto ambientale, usiamo energie rinnovabili,
+                        ricicliamo e
+                        cerchiamo soluzioni ecologiche. </h4>
+                    <!-- <img src="immagini/gruppo 1/PovertàNelMedioevo B_N.png" alt=""> -->
+                </a>
             </div>
 
         </div>
 
         <div id="altri_articoli">
             <div id="altri_articoli_sinistra">
-                <h4>Tecniche agricole e allevamento</h4>
-                <figure>
-                    <img class="altri_articoli_img" src="immagini/gruppo 2/Allevamento.JPG"
-                        alt="Immagine primo articolo">
-                </figure>
-                <p>Le tecniche agricole tradizionali prevedevano l’uso di attrezzi manuali come aratri, zappe e
-                    rastrelli, con metodi di rotazione triennale e maggese. Con il progresso tecnologico, si è assistito
-                    alla meccanizzazione dell’agricoltura con l’uso di trattori e sistemi di irrigazione avanzati che
-                    includono fertilizzanti. Anche l’allevamento ha subito trasformazioni: inizialmente basato su metodi
-                    semplici e animali come bovini, pecore e maiali, oggi è industrializzato e supportato da tecnologie
-                    moderne per migliorare la produttività e ridurre i costi.
-                </p>
-                <!-- figcaption>Per saperne di più...</figcaption -->
+                <a href="Sostenibilià ambientale nel passato.html">
+                    <h4>Tecniche agricole e allevamento</h4>
+                    <figure>
+                        <img class="altri_articoli_img" src="immagini/gruppo 2/Allevamento.JPG"
+                            alt="Immagine primo articolo">
+                    </figure>
+                    <p>Le tecniche agricole tradizionali prevedevano l’uso di attrezzi manuali come aratri, zappe e
+                        rastrelli, con metodi di rotazione triennale e maggese. Con il progresso tecnologico, si è
+                        assistito
+                        alla meccanizzazione dell’agricoltura con l’uso di trattori e sistemi di irrigazione avanzati
+                        che
+                        includono fertilizzanti. Anche l’allevamento ha subito trasformazioni: inizialmente basato su
+                        metodi
+                        semplici e animali come bovini, pecore e maiali, oggi è industrializzato e supportato da
+                        tecnologie
+                        moderne per migliorare la produttività e ridurre i costi.
+                    </p>
+                    <!-- figcaption>Per saperne di più...</figcaption -->
+                </a>
             </div>
             <div id="altri_articoli_centro">
-                <h4>Fertilizziazione e irrigazione </h4>
-                <figure>
-                    <img class="altri_articoli_img" src="immagini/gruppo 2/Fertilizzazione.jpeg"
-                        alt="Immagine primo articolo">
-                </figure>
-                <p>Nel passato, la fertilizzazione era garantita dall’uso di letame e maggese, mentre oggi si utilizzano
-                    fertilizzanti biologici e sintetici, aumentando l’efficienza delle colture. Il sistema di
-                    irrigazione, un tempo dipendente dalle precipitazioni e dai fiumi, ora è altamente sviluppato con
-                    tecnologie moderne per ottimizzare l’uso dell’acqua.
-                </p>
+                <a href="Sostenibilià ambientale nel passato.html">
+                    <h4>Fertilizziazione e irrigazione </h4>
+                    <figure>
+                        <img class="altri_articoli_img" src="immagini/gruppo 2/Fertilizzazione.jpeg"
+                            alt="Immagine primo articolo">
+                    </figure>
+                    <p>Nel passato, la fertilizzazione era garantita dall’uso di letame e maggese, mentre oggi si
+                        utilizzano
+                        fertilizzanti biologici e sintetici, aumentando l’efficienza delle colture. Il sistema di
+                        irrigazione, un tempo dipendente dalle precipitazioni e dai fiumi, ora è altamente sviluppato
+                        con
+                        tecnologie moderne per ottimizzare l’uso dell’acqua.
+                    </p>
+                </a>
             </div>
             <div id="altri_articoli_destra">
-                <h4>Impatto ambientale e deforestazione</h4>
-                <figure>
-                    <img class="altri_articoli_img" src="immagini/gruppo 2/ImpattoAmbientale.jpeg"
-                        alt="Immagine primo articolo">
-                </figure>
-                <ol>
-                    <li>L’impatto ambientale dell’agricoltura tradizionale era limitato, principalmente legato alla
-                        deforestazione necessaria per l’espansione agricola.</li>
-                    <li>Oggi, invece, l’agricoltura intensiva e l’urbanizzazione hanno accelerato la deforestazione, con
-                        gravi conseguenze sui cambiamenti climatici.
-                    </li>
-                </ol>
+                <a href="Sostenibilià ambientale nel passato.html">
+                    <h4>Impatto ambientale e deforestazione</h4>
+                    <figure>
+                        <img class="altri_articoli_img" src="immagini/gruppo 2/ImpattoAmbientale.jpeg"
+                            alt="Immagine primo articolo">
+                    </figure>
+                    <ol>
+                        <li>L’impatto ambientale dell’agricoltura tradizionale era limitato, principalmente legato alla
+                            deforestazione necessaria per l’espansione agricola.</li>
+                        <li>Oggi, invece, l’agricoltura intensiva e l’urbanizzazione hanno accelerato la deforestazione,
+                            con
+                            gravi conseguenze sui cambiamenti climatici.
+                        </li>
+                    </ol>
+                </a>
             </div>
 
         </div>
