--- a/Sostenibilià ambientale nel passato.html
+++ b/Sostenibilià ambientale nel passato.html
@@ -12,11 +12,11 @@
     <nav id="indice">
         <ul class="indice">
             <li><a href="index.html#Container_primogruppo">Povertà nel medioevo</a></li>
-            <li><a class="active" href="index.html##Container_secondogruppo">Sostenibilità ambientale nel passato</a></li>
-            <li><a href="index.html##Container_terzogruppo">La distribuzione delle risorse oggi</a></li>
-            <li><a href="index.html##Container_quartogruppo">Povertà e diritto</a></li>
-            <li><a href="index.html##Container_quintogruppo">Sostenibilità e diritto internazionale</a></li>
-            <li><a href="index.html##Container_sestogruppo">Lezioni dalla storia per il futuro</a></li>
+            <li><a class="active" href="index.html#Container_secondogruppo">Sostenibilità ambientale nel passato</a></li>
+            <li><a href="index.html#Container_terzogruppo">La distribuzione delle risorse oggi</a></li>
+            <li><a href="index.html#Container_quartogruppo">Povertà e diritto</a></li>
+            <li><a href="index.html#Container_quintogruppo">Sostenibilità e diritto internazionale</a></li>
+            <li><a href="index.html#Container_sestogruppo">Lezioni dalla storia per il futuro</a></li>
         </ul>
     </nav>
     <h1>Sostenibilià ambientale nel passato</h1>
